[package]
name = "hyperlight-component-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
description = """
Shared implementation for the procedural macros that generate Hyperlight host and guest bindings from component types
"""

[lib]
name = "hyperlight_component_util"

[dependencies]
wasmparser = { version = "0.244.0" }
quote = { version = "1.0.44" }
proc-macro2 = { version = "1.0.106" }
syn = { version = "2.0.114" }
itertools = { version = "0.14.0" }
prettyplease = { version = "0.2.37" }
log = { version = "0.4" }
tracing = { version = "0.1.44", features = ["log"]}